--- a/tigergoodbuy/style.css
+++ b/tigergoodbuy/style.css
@@ -3,6 +3,7 @@
 *
 {
     font-family: "Roboto", sans-serif;
+    transition: all 0.15s;
 }
 
 header
@@ -31,4 +32,55 @@ h1
     padding: 32px;
     font-weight: 100;
     font-style: normal;
+}
+
+.miniPostList
+{
+    padding: 32px;
+    display: flex;
+}
+
+.miniPost
+{
+    border-style: solid;
+    border-color: black;
+    border-width: 4px;
+    border-radius: 16px;
+    padding: 16px;
+    margin: 16px;
+    width: 256px;
+    height: 256px;
+    overflow: hidden;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+}
+
+.miniPost:hover
+{
+    cursor: pointer;
+    scale: 105%;
+}
+
+.miniPostImage
+{
+    object-fit: cover;
+    flex: 1;
+}
+
+.miniPostName
+{
+    padding: 16px;
+    text-align: center;
+    background-color: #fff;
+    font-weight: 900;
+}
+
+footer
+{
+    background-color: #212529;
+    padding: 16px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
 }
