--- a/tigergoodbuy/style.css
+++ b/tigergoodbuy/style.css
@@ -1,9 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
 *
 {
     font-family: "Roboto", sans-serif;
     transition: all 0.15s;
+}
+
+body
+{
+    margin: 0;
+    position: relative;
 }
 
 header
@@ -12,23 +16,71 @@ header
     padding: 16px;
     display: flex;
     flex-direction: row;
-    justify-content: start;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+header .tigerButton:nth-child(3)
+{
+    justify-self: left;
 }
 
 .tigerButton
 {
     background-color: #f76902;
-    text-align: center;
+    text-align: left;
     color: white;
     font-size: 48px;
     margin: 16px;
     padding: 16px;
-    border-radius: 32px;
+    border-radius: 16px;
     font-weight: 700;
+    overflow: hidden;
+    border-color: transparent;
+}
+
+.tigerButton:hover
+{
+    background-color: #f5ac78;
+    color: white;
+    scale: 102%;
+}
+
+.tigerButton input
+{
+    background-color: #f7690200;
+    border-color: #00000000;
+}
+
+.tigerButton button
+{
+    background-color: #00000000;
+    border-color: #00000000;
+}
+
+.tigerButton img
+{
+    width: 64px;
+    object-fit: contain;
+    flex: 1;
+}
+
+.tigerButton ::placeholder
+{
+    color: white;
+    font-weight: 700;
+}
+
+.tigerButtonSelected
+{
+    background-color: white;
+    color: #f76902;
 }
 
 h1
 {
+    font-family: "Roboto", sans-serif;
     padding: 32px;
     font-weight: 100;
     font-style: normal;
@@ -38,7 +90,8 @@ h1
 {
     padding: 32px;
     display: flex;
-    overflow: scroll;
+    overflow-x: scroll;
+    overflow-y: hidden
 }
 
 .miniPost
@@ -86,6 +139,19 @@ footer
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    position: absolute;
+    bottom: -16px;
+    transform: translateY(100%);
+    width: 100%;
+    align-items: center;
+}
+
+footer .tigerButton
+{
+    flex-grow: 1;
+    text-align: center;
+    text-wrap: nowrap;
+    overflow: hidden;
 }
 
 #newPostFormDiv
@@ -95,30 +161,31 @@ footer
     flex-direction: row;
     justify-content: space-evenly;
     padding: 32px;
+    font-size: 32px;
 }
 
 #newPostFormDiv div
 {
     display: flex;
     flex-direction: column;
+    font-size: 32px;
 }
 
-#newPostFormDiv input
+#newPostFormDiv input, #quillWrapper
 {
     width: 100%;
-    font-size: 32px;
     padding: 8px;
     margin: 16px;
     border-color: darkgray;
+    border-style: solid;
     background-color: lightgray;
 }
 
-#newPostFormDiv textarea
+.ql-toolbar, .ql-container
 {
     width: 100%;
-    font-size: 32px;
-    padding: 8px;
-    margin: 16px;
+    padding-left: auto 8px;
+    margin-left: auto 16px;
     border-color: darkgray;
     background-color: lightgray;
 }
@@ -136,7 +203,7 @@ footer
     width: 100%;
     padding: 8px;
     margin: 16px;
-    object-fit: cover;
+    object-fit: contain;
     flex: 1;
 }
 
@@ -159,6 +226,129 @@ footer
 
 #newPostSubmit
 {
-    margin: 0 auto;
+    margin: 16px auto;
     display: block;
+}
+
+.ql-hidden, .ql-editing
+{
+    display: none;
+    opacity: 0%;
+}
+
+#postResults
+{
+    display: flex;
+    flex-direction: column;
+}
+
+.longPost
+{
+    border-style: solid;
+    border-color: black;
+    border-width: 4px;
+    border-radius: 16px;
+    padding: 16px;
+    margin: 16px auto;
+    width: 90%;
+    height: 256px;
+    overflow: hidden;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: row;
+    justify-content: baseline;
+    flex-shrink: 0;
+}
+
+.longPost:hover
+{
+    cursor: pointer;
+    scale: 105%;
+}
+
+.longPostImage
+{
+    width: 256px;
+    object-fit: contain;
+}
+
+.longPostName
+{
+    padding: 16px;
+    text-align: left;
+    background-color: #fff;
+    font-weight: 900;
+    font-size: 32px;
+    padding: 0px auto;
+    margin: 0px auto;
+}
+
+.longPostDesc
+{
+    padding: 16px;
+    text-align: left;
+    background-color: #fff;
+    font-weight: 500;
+    font-size: 16px;
+}
+
+.headerRight
+{
+    display: flex;
+    flex-direction: row;
+    flex-shrink: 0;
+}
+
+#searchForm
+{
+    max-width: 100%;
+}
+
+#searchForm .tigerButton
+{
+    display: flex;
+    flex-direction: row;
+}
+
+#searchQuery
+{
+    width: 100%;
+}
+
+@media only screen and (max-width: 1000px)
+{
+    header
+    {
+        flex-direction: column;
+    }
+
+    footer
+    {
+        flex-direction: column;
+    }
+
+    footer .tigerButton
+    {
+        flex-grow: none;
+    }
+
+    #newPostFormDiv
+    {
+        flex-direction: column;
+    }
+
+    #newPostLeft
+    {
+        width: 100%;
+    }
+
+    #newPostRight
+    {
+        width: 100%;
+    }
+
+    #sellerText, #dateText, #priceText
+    {
+        text-align: center;
+    }
 }
